Fixed packages
Signed-off-by: Michal Jarski <michal@jarski.eu>